--- a/techt.css
+++ b/techt.css
@@ -3,7 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   color: #0099ff;
 }
 
@@ -11,32 +11,61 @@ body {
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
-
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
-}
-
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper > .container {
-  padding-right: 0;
-  padding-left: 0;
-}
-.navbar-wrapper .navbar {
+.navbar {
   background-color: #0099ff;
-  padding-right: 15px;
-  padding-left: 15px;
+  border-color: #0064a7;
 }
-.navbar-wrapper .navbar .container {
-  width: auto;
+.navbar .navbar-brand {
+  color: #ecf0f1;
 }
-.navbar-collapse collapse{
-  background-color: white;
+.navbar .navbar-brand:hover,
+.navbar .navbar-brand:focus {
+  color: #ecdbff;
 }
+.navbar .navbar-text {
+  color: #ecf0f1;
+}
+.navbar .navbar-nav > li > a {
+  color: #ecf0f1;
+}
+.navbar .navbar-nav > li > a:hover,
+.navbar .navbar-nav > li > a:focus {
+  color: #ecdbff;
+}
+.navbar .navbar-nav > .active > a,
+.navbar .navbar-nav > .active > a:hover,
+.navbar .navbar-nav > .active > a:focus {
+  color: #ecdbff;
+  background-color: #0064a7;
+}
+.navbar .navbar-nav > .open > a,
+.navbar .navbar-nav > .open > a:hover,
+.navbar .navbar-nav > .open > a:focus {
+  color: #ecdbff;
+  background-color: #0064a7;
+}
+.navbar-default .navbar-toggle {
+  border-color: #0064a7;
+}
+.navbar .navbar-toggle:hover,
+.navbar .navbar-toggle:focus {
+  background-color: #0064a7;
+}
+.navbar .navbar-toggle .icon-bar {
+  background-color: #ecf0f1;
+}
+.navbar .navbar-collapse,
+.navbar .navbar-form {
+  border-color: #ecf0f1;
+}
+.navbar .navbar-link {
+  color: #ecf0f1;
+}
+.navbar .navbar-link:hover {
+  color: #ecdbff;
+}
+
+
 
 
 /* CUSTOMIZE THE CAROUSEL
@@ -127,17 +156,6 @@ body {
     line-height: 1.4;
   }
 
-  .featurette-heading {
-    font-size: 50px;
-  }
-}
-
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
-}
-
 #body /*define the main content*/ {
   margin-left: 25%;
   vertical-align: baseline;
@@ -205,23 +223,7 @@ textarea {
   width: 125px;
   height: 30px;
   display: block;
-  -webkit-box-shadow: 0px 6px 9px 2px rgba(0,0,0,0.65);
-  -moz-box-shadow: 0px 6px 9px 2px rgba(0,0,0,0.65);
-  box-shadow: 0px 6px 9px 2px rgba(0,0,0,0.65); /* main box-shadow */
-  -moz-border-radius: 5px 5px 5px 5px;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
-  border: 0px none #000000; /* main border-radius */
-}
 
-.button:hover {
-  background: rgba(227,227,227,1);
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(227,227,227,1)), color-stop(0.88, rgba(166,166,166,1)), to(rgba(201,201,201,1)));
-background: -webkit-linear-gradient(rgba(227,227,227,1) 0%, rgba(166,166,166,1) 88%, rgba(201,201,201,1) 100%);
-background: -moz-linear-gradient(rgba(227,227,227,1) 0%, rgba(166,166,166,1) 88%, rgba(201,201,201,1) 100%);
-background: -o-linear-gradient(rgba(227,227,227,1) 0%, rgba(166,166,166,1) 88%, rgba(201,201,201,1) 100%);
-background: linear-gradient(rgba(227,227,227,1) 0%, rgba(166,166,166,1) 88%, rgba(201,201,201,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3e3e3', endColorstr='#c9c9c9', GradientType=0 );
 }
 
 .button:active {
