--- a/templates/form_wtf.html
+++ b/templates/form_wtf.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %}
-    Tech T Testimonials
+    Tech T Testimonials Form
 {% endblock %}
 
 {% block content %}
