--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -84,13 +84,60 @@
       <p><span class="glyphicon glyphicon-envelope"></span> techtrepairs@gmail.com</p>	   
     </div>
     <div class="col-sm-4 col-xs-12 slideanim">
+        
+        
+<!-- Contact Us Form -->
+         
+         <form id="contactusform" class="form-horizontal" action="" method="post" ><fieldset> 
+           
+         <!--Name form--> 
+         <div class="form-group"> 
+         <label class="col-md-6 control-label" for="name">Name:</label>    
+         <div class="col-md-6"> 
+         <input id='name' name="name" type="text" placeholder="Enter your Name" class="form-control input-md">
+         </div> 
+          </div> 
+          <!-- Email address form-->
+          <div class="form-group"> 
+          <label class="col-md-6 control-label" for="email">E-mail</label>     
+          <div class="col-md-6"> 
+          <input id="email" name="email" type="text" placeholder="Enter your e-mail here" class="form-control input-md">
+          </div>
+           </div>
+           
+            <!--Contact Num-->
+          <div class="form-group"> 
+          <label class="col-md-6 control-label" for="contactnum">Contact Number</label>     
+          <div class="col-md-6"> 
+          <input id="contactnum" name="contactnum" type="text" placeholder="Contact Number" class="form-control input-md">
+          </div>
+           </div>
+                     
+          <!--Message box  -->
+          <div class="text-center">
+          <textarea rows="20" cols="200" name="message" id="message" placeholder="Enter your message here"></textarea>
+          
+          <!-- Submit button --> 
+          <div class="form-group"> <label class="col-md-6 control-label" for="email"></label>
+          <div class="col-md-6">
+               <button id="submitbtn" name="submitbtn" class="btn btn-default">Submit</button> 
+          </div> 
+        </div> 
+        </fieldset> 
+        </form> 
+        <a href="showdb.php"></a> 
+           </body>
+    </div>
+    </div>
+
+        
     
         </div>
       </div>	
     </div>
   </div>
 </div>
-
+</div>
 
 
 
@@ -124,6 +171,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 
 
+
+
+
       <!-- FOOTER -->
       <footer class="container-fluid text-center">
       <a href="#" title="To Top">
@@ -150,11 +200,11 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="moreless.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/static/js/contactus.js"></script>
   </body>
 </html>
 
